prevent impact headings from breaking without alignment

--- a/themes/roots-nextdatagov/assets/less/app.less
+++ b/themes/roots-nextdatagov/assets/less/app.less
@@ -1136,6 +1136,8 @@ margin-bottom : 1em;
       span {
         color : @blue-darkblue;
         font-weight : bold;
+        display : inline-block;
+        width : 85%;
       }
 
     }
